# Starfield-SDL2

./: .gitignore  .gitmodules  CMakeLists.txt  Star.cpp  Star.hpp  main.cpp
src/: Star.hpp  utils.hpp
